Fix alert setting wrapping

--- a/src/sentry/static/sentry/less/includes/simple-slider.less
+++ b/src/sentry/static/sentry/less/includes/simple-slider.less
@@ -1,14 +1,14 @@
+@slider-width: 16px;
+
 .slider {
-  width: 300px;
-  padding-right: 100px;
   position: relative;
 
   > .dragger {
-    background: lighten(#4593DE, 5%);
+    background: @purple;
 
-    border-radius: 16px;
-    width: 16px;
-    height: 16px;
+    border-radius: @slider-width;
+    width: @slider-width;
+    height: @slider-width;
     box-shadow: 0 0 0 3px #fff;
   }
 
@@ -17,17 +17,20 @@
   }
 
   > .track {
-    background: #f1f2f3;
-
+    width: auto !important; // overwrite inline styles
+    background: @white-darkest;
     border-radius: 8px;
     height: 3px;
+    left: -(@slider-width / 2);
+    right: -(@slider-width / 2);
   }
 
   > .value {
-    top: -4px;
+    top: -28px;
     position: absolute;
-    right: -100px;
-    width: 80px;
-    color: #999;
+    right: -(@slider-width / 2);
+    // width: 80px;
+    color: @60;
+    text-align: right;
   }
 }
